--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
+        <!-- lookup parent from repository -->
     </parent>
     <groupId>minecraftserveradmin</groupId>
     <artifactId>core</artifactId>
@@ -19,7 +20,15 @@
     </properties>
 
     <dependencies>
-<!--        log4j2-->
+        <!-- Gson       -->
+        <dependency>
+            <groupId>com.3sidedcube.util</groupId>
+            <artifactId>GeoGson</artifactId>
+            <version>1.6</version>
+            <type>pom</type>
+        </dependency>
+
+        <!--        log4j2-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -35,14 +44,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
-<!--        jason-->
+        <!--jason-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
+            <version>1.2.62</version>
         </dependency>
 
-        <!--系统问题检测-->
+        <!--系统检测-->
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
