修正了一些不合理的地方 增加了插件信息的获取 完善代码

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     </properties>
 
     <dependencies>
+<!--        yaml-->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.10</version>
+        </dependency>
         <!-- Gson       -->
         <dependency>
             <groupId>com.3sidedcube.util</groupId>
