--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=25567
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/minecraft?serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/Mine?serverTimezone=GMT
 
 
 # thymeleaf
