--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.3.1.RELEASE</version>
+        </dependency>
         <!--        yaml-->
         <dependency>
             <groupId>org.yaml</groupId>
