--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
+
+spring.mvc.dispatch-options-request=true
+
+
 #log4j
 logging.config=classpath:log4j2.xml
 
@@ -20,3 +24,4 @@ spring.servlet.multipart.max-request-size=10240MB
 minecraft.startservercmd=java -jar server.jar nogui
 
 server.serverInfoSenderTimer=1000
+#server.serverInfoSenderTimer=1000
