--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ minecraft.startservercmd=java -jar server.jar nogui
 
 server.serverInfoSenderTimer=1000
 #server.serverInfoSenderTimer=1000
+
+MCM.Default.administrator.username=admin
+MCM.Default.administrator.password=admin
