--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.0</version>
+        </dependency>
+
         <!--        https://mvnrepository.com/artifact/org.apache.any23/apache-any23-encoding-->
         <dependency>
             <groupId>org.apache.any23</groupId>
