--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=25567
-spring.datasource.username=192_168_0_106
-spring.datasource.password=hAEN5Gz8CBjpTPyz
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/192_168_0_106?serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/mine?serverTimezone=GMT
 
 
 # thymeleaf
