优化和功能改进

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ server.serverInfoSenderTimer=1000
 #server.serverInfoSenderTimer=1000
 
 MCM.Default.administrator.username=admin
-MCM.Default.administrator.password=admin
+MCM.Default.administrator.password=123456
