--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=25567
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/plain,text/css,application/x-javascript
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -28,3 +31,7 @@ server.serverInfoSenderTimer=1000
 
 MCM.Default.administrator.username=admin
 MCM.Default.administrator.password=123456
+
+MCM.Minecraft.BindingForumWithLoginPlugin=true
+MCM.Minecraft.logplugin.name=authme
+MCM.Minecraft.logplugin.table=authme
