添加vo层 格式化返回数据

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/plain,text/css,application/x-javascript
 
 
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -22,12 +23,17 @@ spring.mvc.dispatch-options-request=true
 #log4j
 logging.config=classpath:log4j2.xml
 
+#servlet
 spring.servlet.multipart.max-file-size=10240MB
 spring.servlet.multipart.max-request-size=10240MB
 
+#mcServerSetting
 minecraft.startservercmd=java -jar server.jar nogui
 
-server.serverInfoSenderTimer=1000
+server.mcServerStatusSenderTimer=1000
+
+# ??cpu??????????? ???4000+1000 = 5000ms
+server.serverInfoSenderTimer=4000
 #server.serverInfoSenderTimer=1000
 
 MCM.Default.administrator.username=admin
